# LRAG

./: .env.example  .env.example.bak  .gitignore  README.md  dev.sh  diagnose.bat  fix_venv.bat  init_db.bat  install.bat  install_from_git.bat  install_windows.bat  install_windows_portable.bat  nginx.conf  pyproject.toml  rebuild.bat  run.bat  run.sh  run_web.sh  setup_postgres.bat  stop_postgres.bat  test_copy_only.bat  test_install.bat  test_pg_structure.bat  update.bat
.streamlit/: config.toml
frontend/: .env.example  .gitignore  package-lock.json  package.json  run.bat  update.bat  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  index.ts
frontend/src/components/: AuthGuard.tsx  SettingsDialog.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Dialog.tsx  Input.tsx
frontend/src/pages/: LoginPage.tsx  ProjectsPage.tsx  WorkspacePage.tsx
frontend/src/store/: appStore.ts
frontend/src/types/: index.ts
scripts/: build_windows.py  compare_ocr.py  create_release.bat  extract_relations.py  package_dist.sh  rebuild_all.bat  rebuild_all.sh
src/: agent.py  db_sync.py  dependencies.py  graph_tools.py  migration_add_projects.sql  migration_add_users.sql  prompts.py  providers.py  schema.sql  settings.py  tools.py  web_api.py  web_ui.py
src/api/: __init__.py  dependencies.py
src/api/models/: __init__.py  auth.py  jobs.py  requests.py  responses.py
src/api/routes/: __init__.py  auth.py  chat.py  documents.py  jobs.py  messages.py  projects.py  sessions.py  settings.py
src/ingestion/: audio_transcriber.py  embedder.py  entity_extractor.py  ingest.py  relation_extractor.py
